--- a/style.css
+++ b/style.css
@@ -31,3 +31,103 @@ a{
     color: white;
     font-family: 'Open Sans', sans-serif;
 }
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.upLogo {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin: 60px; /* Adjust margin as needed */
+}
+
+.upLogo img {
+    width: 200px; /* Adjust width as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    background: #800000;
+    height: auto;
+    width: 100vw;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 20px;
+    color: #008000;
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3 {
+    font-size: 25px;
+    font-weight: 200;
+    text-transform: capitalize;
+    line-height: 3rem;
+    letter-spacing: 2px;
+}
+
+.footer-content p {
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 24px;
+    font-size: 15px;
+    padding-bottom: 30px;
+}
+
+.socials {
+    border-radius: 20px;
+    padding: 8px 8px;
+    background-color: #008000;
+    list-style: none;
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 90px; /* Adjust margin as needed */
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.socials a i {
+    font-size: 1.1rem;
+    transition: color 0.4s ease;
+    letter-spacing: 10px;
+}
+
+.socials a:hover i {
+    color: #005a00;
+    transform: translateY(-2px);
+}
+
+.footer-bottom {
+    width: 100vw;
+    padding: -90px 0;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    
+}
+
+.footer-bottom p {
+    font-size: 15px;
+    word-spacing: 5px;
+    text-transform: capitalize;
+    color: #008000;
+    padding-bottom: 10px;
+}
