Fixed footer logo

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ footer {
     text-align: center;
 }
 
-.footer-content h3 {
+.footer-content .upeeks-footer {
     font-size: 25px;
     font-weight: 200;
     text-transform: capitalize;
