--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@ body{
     padding: 0;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/* !START! Universal CSS for HEADER */
 header{
     border: 1px solid green;
-    height: 225px;
+    height: 75px;
     padding: 10px;
     padding-left: 75px;
     padding-right: 75px;
@@ -21,8 +27,7 @@ a{
 }
 
 .header-logo{
-    padding-left: 50px;
-    padding-right: 50px;
+    margin-left: 150px;
     font-size: 36px;
 }
 
@@ -31,23 +36,66 @@ a{
     color: white;
     font-family: 'Open Sans', sans-serif;
 }
-* {
-    margin: 0;
-    padding: 0;
-}
+
 
 .upLogo {
     position: fixed;
     bottom: 0;
     left: 0;
-    margin: 60px; /* Adjust margin as needed */
+    margin: 60px;
 }
 
 .upLogo img {
-    width: 200px; /* Adjust width as needed */
-    height: auto; /* Maintain aspect ratio */
+    width: 200px;
+    height: auto; 
+    margin-left: 150px;
 }
 
+/* !START! Universal CSS for Navigation Bar */
+nav {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+}
+
+.navbar {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar li {
+    margin: 0 80px;
+}
+
+.navbar a {
+    position: relative;
+    text-decoration: none;
+    color: #fff; 
+    font-weight: bold;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.navbar a:after{
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 2px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+.navbar a:hover:after{
+    width: 100%;
+}
+/* !END! Universal CSS for Navigation Bar */
+/* !END! Universal CSS for HEADER */
+
+/* !START! Universal CSS for FOOTER */
 footer {
     position: absolute;
     bottom: 0;
@@ -92,7 +140,8 @@ footer {
     position: fixed;
     bottom: 0;
     right: 0;
-    margin: 90px; /* Adjust margin as needed */
+    margin: 75px; 
+    margin-right: 150px;
 }
 
 .socials li {
@@ -131,3 +180,4 @@ footer {
     color: #008000;
     padding-bottom: 10px;
 }
+/* !END! Universal CSS for FOOTER */
