--- a/src/gallery.css
+++ b/src/gallery.css
@@ -1,6 +1,25 @@
+/* body{
+    background-image: url("../img/YJM_8102.JPG");
+    background-repeat: no-repeat;
+    background-size: 100%;
+} */
+h1{
+    font-family: 'Open Sans', sans-serif;
+}
+
+main{
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+main h1{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 .gallery-nav {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: auto;
 }
 
@@ -21,13 +40,29 @@
     text-decoration: none;
     color: black; 
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     transition: color 0.3s;
 }
 
 .gallery-nav hr{
-    width: 75%;
+    width: 90%;
     height: 1px;
     background-color: black;
     margin: auto;
+}
+
+.preview{
+    overflow: hidden;
+}
+.preview img{
+    float: left;
+    width: 55%;
+}
+.preview p{
+    font-family: 'Open Sans', sans-serif;
+    text-align: justify;
+    line-height: 50px;
+    margin-top: 50px;
+    margin-right: 30px;
+    margin-left: 750px;
 }
