--- a/style.css
+++ b/style.css
@@ -36,9 +36,7 @@ a{
 }
 
 .upLogo {
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: absolute;
     margin: 60px;
 }
 
@@ -93,13 +91,12 @@ nav {
 
 /* !START! Universal CSS for FOOTER */
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     background: #800000;
-    height: auto;
-    width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 20px;
+    margin-top: 50px;
     color: #008000;
 }
 
@@ -133,7 +130,7 @@ footer {
     background-color: #008000;
     list-style: none;
     display: flex;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     right: 0;
     margin: 75px; 
