--- a/src/gallery.css
+++ b/src/gallery.css
@@ -52,17 +52,18 @@ main h1{
 }
 
 .preview{
-    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
 }
 .preview img{
     float: left;
-    width: 55%;
+    width: 100%;
 }
 .preview p{
     font-family: 'Open Sans', sans-serif;
     text-align: justify;
     line-height: 50px;
     margin-top: 50px;
-    margin-right: 30px;
-    margin-left: 750px;
+    border: 1px solid black;
 }
