--- a/style.css
+++ b/style.css
@@ -6,11 +6,6 @@ body{
     padding: 0;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 /* !START! Universal CSS for HEADER */
 header{
     height: 75px;
@@ -95,7 +90,6 @@ footer {
     bottom: 0;
     background: #800000;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 20px;
     margin-top: 50px;
     color: #008000;
 }
@@ -110,9 +104,7 @@ footer {
 
 .footer-content .upeeks-footer {
     font-size: 25px;
-    font-weight: 200;
-    text-transform: capitalize;
-    line-height: 3rem;
+    font-weight: 1700;
     letter-spacing: 2px;
 }
 
@@ -158,12 +150,11 @@ footer {
 }
 
 .footer-bottom {
-    width: 100vw;
+    width: 100%;
     padding: -90px 0;
     text-align: center;
     position: absolute;
     bottom: 0;
-    
 }
 
 .footer-bottom p {
@@ -174,3 +165,48 @@ footer {
     padding-bottom: 10px;
 }
 /* !END! Universal CSS for FOOTER */
+
+/* Main Body Styles */
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    max-width: 1750px;
+    overflow: hidden;
+}
+
+.slider-inner {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    flex: 0 0 100%;
+    box-sizing: border-box;
+}
+
+.slide img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.slider-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 35px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    color: #333;
+}
+
+#prev-btn {
+    left: 10px;
+}
+
+#next-btn {
+    right: 10px;
+}
