--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 
 /* !START! Universal CSS for HEADER */
 header{
-    height: 75px;
+    height: 150px;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -61,9 +61,8 @@ nav {
 .navbar a {
     position: relative;
     text-decoration: none;
-    color: #fff; 
-    font-weight: bold;
-    font-size: 20px;
+    color: #fff;
+    font-size: 14px;
     transition: color 0.3s;
 }
 
@@ -167,11 +166,14 @@ footer {
 /* !END! Universal CSS for FOOTER */
 
 /* Main Body Styles */
+.home{
+    background-color: #800000;
+}
 
 .slider-container {
     position: relative;
     width: 100%;
-    max-width: 1750px;
+    max-width: 1810px;
     overflow: hidden;
 }
 
@@ -195,12 +197,12 @@ footer {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 35px;
+    font-size: 50px;
     cursor: pointer;
     background: none;
     border: none;
     outline: none;
-    color: #333;
+    color: gray;
 }
 
 #prev-btn {
