--- a/src/about.css
+++ b/src/about.css
@@ -1,6 +1,8 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    /* REMOVE THIS */
+    box-sizing: border-box; 
+    /* END */
     font-family: "roboto", sans-serif;
 }
