--- a/src/about.css
+++ b/src/about.css
@@ -8,7 +8,7 @@ body {
   padding: 80px 0;
 }
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -24,6 +24,7 @@ body {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
+  text-align: justify;
 }
 .social-links {
   margin-bottom: 20px;
@@ -35,7 +36,9 @@ body {
   line-height: 40px;
   text-align: center;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-right: 25px;
+  margin-top: 25px;
+  margin-bottom: 25px;
   font-size: 1.4rem;
   color: white;
   background-color: #800000;
@@ -143,4 +146,14 @@ body {
     section {
       padding: 1em 7em;
     }
+  }
+
+  .gap{
+    width: 90%;
+    height: 350px;
+    margin: auto;
+    background-position: center;
+    background-size: cover;
+    background-image: url("../img/YJM_8683.JPG");
+    background-attachment: fixed;
   }
