--- a/style.css
+++ b/style.css
@@ -219,7 +219,8 @@ footer {
     display: flex;
     flex-direction: column;
     border-radius: 40px;
-    margin-left: 20px;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 .home a{
     float: right;
