--- a/style.css
+++ b/style.css
@@ -8,20 +8,20 @@ body{
 
 /* !START! Universal CSS for HEADER */
 header{
-    height: 24vh;
+    height: 18vh;
     padding: 10px;
     display: flex;
     align-items: center;
     background-color: #800000;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-left: 16vw;
+    padding-right: 16vw;
 }
 a{
     text-decoration: none;
 }
 
 .header-logo{
-    font-size: 30px;
+    font-size: 30px
 }
 
 .header-logo h1{
@@ -55,7 +55,7 @@ nav {
 }
 
 .navbar li {
-    margin: 0 80px;
+    margin: 0 4vw;
 }
 
 .navbar a {
