--- a/style.css
+++ b/style.css
@@ -32,12 +32,13 @@ a{
 
 .upLogo {
     position: absolute;
-    margin: 74px;
+    margin: 75px;
+    margin-left: 2vw;
 }
 
 .upLogo img {
     width: 200px;
-    margin-left: 100px;
+    margin-left: 5.2vw;
     height: auto; 
 }
 
@@ -102,15 +103,16 @@ footer {
 }
 
 .footer-content .upeeks-footer {
-    font-size: 25px;
-    font-weight: 1700;
+    font-size: 2vw;
+    font-weight: bold;
     letter-spacing: 2px;
+    margin-bottom: 1.5vh;
 }
 
 .footer-content p {
-    max-width: 500px;
+    max-width: 35vw;
     margin: 10px auto;
-    line-height: 24px;
+    line-height: 30px;
     font-size: 15px;
     padding-bottom: 30px;
 }
@@ -159,9 +161,7 @@ footer {
 .footer-bottom p {
     font-size: 15px;
     word-spacing: 5px;
-    text-transform: capitalize;
     color: #008000;
-    padding-bottom: 10px;
 }
 /* !END! Universal CSS for FOOTER */
 
