--- a/style.css
+++ b/style.css
@@ -30,12 +30,6 @@ a{
     font-family: 'Open Sans', sans-serif;
 }
 
-.upLogo {
-    position: absolute;
-    margin: 75px;
-    margin-left: 2vw;
-}
-
 .upLogo img {
     width: 200px;
     margin-left: 5.2vw;
@@ -105,29 +99,25 @@ footer {
 .footer-content .upeeks-footer {
     font-size: 2vw;
     font-weight: bold;
-    letter-spacing: 2px;
-    margin-bottom: 1.5vh;
+    margin-bottom: 1vh;
+    margin-top: 25px;
 }
 
 .footer-content p {
     max-width: 35vw;
-    margin: 10px auto;
+    margin: 0 0;
     line-height: 30px;
     font-size: 15px;
-    padding-bottom: 30px;
 }
 
 .socials {
     border-radius: 20px;
     padding: 8px 8px;
-    background-color: #008000;
     list-style: none;
     display: flex;
-    position: absolute;
     bottom: 0;
     right: 0;
-    margin: 75px; 
-    margin-right: 150px;
+    margin-bottom: 40px; 
 }
 
 .socials li {
@@ -140,21 +130,21 @@ footer {
 }
 
 .socials a i {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     transition: color 0.4s ease;
     letter-spacing: 10px;
 }
 
 .socials a:hover i {
-    color: #005a00;
+    color: #fff;
     transform: translateY(-2px);
 }
 
 .footer-bottom {
     width: 100%;
-    padding: -90px 0;
     text-align: center;
     position: absolute;
+    justify-content: center;
     bottom: 0;
 }
 
@@ -167,15 +157,36 @@ footer {
 
 /* Main Body Styles */
 .home{
-    background-color: #800000;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.home-text{
+    position: absolute;
+    top: 30%;
+    left: 6%;
+    width: 80%;
+    padding: 25px;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.50);
+    justify-content: center;
+}
+
+.home-text h1{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+.home-text p{
+    font-family: Montserrat;
+    font-size: 25px;
 }
 
 .slider-container {
     position: relative;
     width: 100%;
-    max-width: 1810px;
+    max-width: 1950px;
     overflow: hidden;
 }
 
@@ -193,6 +204,7 @@ footer {
     max-width: 100%;
     height: auto;
     display: block;
+    opacity: 60%;
 }
 
 .slider-btn {
@@ -215,16 +227,6 @@ footer {
     right: 10px;
 }
 
-.fit{
-    display: flex;
-    flex-direction: column;
-    border-radius: 40px;
-    margin-left: 1vw;
-    margin-right: 1vw;
-}
-.home a{
-    float: right;
-}
 .fit a{
     display: block;
     padding: 15px;
@@ -237,4 +239,16 @@ footer {
 .fit i {
     font-size: 1.75rem;
     transition: color 0.4s ease;
+}
+
+.gallery-button{
+    padding: 12px 25px;
+    font-family: Montserrat;
+    font-size: 18px;
+    border: none;
+    background-color: #005a00;
+    color: white;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 5px 6px 8px rgba(0, 0, 0, 0.60);
 }
