--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ footer {
     bottom: 0;
     background: #800000;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 50px;
     color: white;
 }
 
@@ -251,4 +250,34 @@ footer {
     border-radius: 50px;
     cursor: pointer;
     box-shadow: 5px 6px 8px rgba(0, 0, 0, 0.60);
+}
+.stories-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
+    flex-direction: column;
+    padding-bottom: 100px;
+}
+.stories-container h1{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 75px;
+    margin-top: 75px;
+    color: #800000
+}
+
+.stories-inner{
+    display: flex;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
+    width: 60vw;
+    border-radius: 50px;
+}
+.stories-inner p{
+    padding: 50px;
+    text-align: center;
+    justify-content: center;
+    font-size: 22px;
+    font-family: Montserrat;
 }
