--- a/src/about.css
+++ b/src/about.css
@@ -2,7 +2,6 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "roboto", sans-serif;
 }
 .about-us {
   padding: 80px 0;
@@ -19,12 +18,14 @@ body {
 .about-us h1 {
   font-size: 45px;
   margin-bottom: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
 .about-us p {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
   text-align: justify;
+  font-family: Montserrat;
 }
 .social-links {
   margin-bottom: 20px;
@@ -33,11 +34,11 @@ body {
   display: inline-block;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  line-height: 42.5px;
   text-align: center;
   border-radius: 50%;
   margin-right: 25px;
-  margin-top: 25px;
+  margin-top: 2px;
   margin-bottom: 25px;
   font-size: 1.4rem;
   color: white;
@@ -54,10 +55,11 @@ body {
   padding: 10px 20px;
   font-size: 18px;
   text-transform: uppercase;
-  border-radius: 5px;
+  border-radius: 50px;
   background-color: #800000;
   transition: all 0.4s ease;
   color: white;
+  font-family: 'Open Sans', sans-serif;
 }
 .btn:hover {
   transform: translateY(-3px);
@@ -77,6 +79,7 @@ body {
   text-align: center;
   font-size: 45px;
   color: black;
+  font-family: 'Open Sans', sans-serif;
 }
 .card {
   box-shadow: 0 0 2.4em rgba(25, 0, 58, 0.1);
@@ -103,6 +106,7 @@ body {
 .card h3 {
   font-weight: 500;
   text-align: center;
+  font-family: Montserrat;
 }
 .card p {
   font-weight: 300;
@@ -110,6 +114,7 @@ body {
   margin: 0.5em 0 2em 0;
   letter-spacing: 1px;
   text-align: center;
+  font-family: Montserrat;
 }
 .icons {
   width: 20%;
