--- a/src/contact.css
+++ b/src/contact.css
@@ -7,15 +7,10 @@
     align-items: center;
     flex-direction: column;
   }
-  .conContent h2{
-    font-size: 120px;
-    font-weight: bolder;
-    font-family: Tahoma;
-  
-  }
   .conContent p{
     font-size: 22px;
     padding: 30px;
+    font-family: Montserrat;
   }
   .conContact .conContent {
     max-width: 800px;
@@ -26,16 +21,17 @@
     font-size:17px;
     font-weight: 500;
     width: 80%;
-    font-family: Segoe UI;
+    font-family: Montserrat;
     padding-top: 8px;
   }
   .conText h3{
-    font-family: Tahoma;
+    font-family: 'Open Sans', sans-serif;
   }
   .conContact .conContent h2 {
-    font-size: 36px;
-    font-weight: 500; 
+    font-size: 40px;
+    font-weight: 700; 
     color: #800000;
+    font-family: 'Open Sans', sans-serif;
   }
   
   .conContact .conContent p {
@@ -121,9 +117,10 @@
     padding: 5px 0;
     font-size: 16px;
     margin: 10px 0;
+    margin-left: 12px;
     pointer-events: none;
     transition: 0.5s;
-    color: maroon;
+    color: gray;
   }
   .contactForm .inputBox input:focus ~ span,
   .contactForm .inputBox input:valid ~ span,
