--- a/src/gallery.css
+++ b/src/gallery.css
@@ -102,13 +102,13 @@ main h1{
     text-align: center;
 }
 .text-container2 p{
-    font-family: 'Open Sans', sans-serif;
+    font-family: Montserrat;
     text-align: justify;
     line-height: 2;
     font-size: 22px;
 }
 .text-container1 p{
-    font-family: 'Open Sans', sans-serif;
+    font-family: Montserrat;
     text-align: justify;
     line-height: 2;
     font-size: 22px;
