--- a/src/contact.css
+++ b/src/contact.css
@@ -123,6 +123,7 @@
   
   .contactForm .inputBox input:focus ~ span,
   .contactForm .inputBox input:valid ~ span,
+  .contactForm .inputBox input:invalid ~ span,
   .contactForm .inputBox textarea:focus ~ span,
   .contactForm .inputBox textarea:valid ~ span{
     color:#fff;
