--- a/src/about.css
+++ b/src/about.css
@@ -18,6 +18,7 @@ body {
 .about-us h1 {
   font-size: 45px;
   margin-bottom: 20px;
+  color:#800000;
   font-family: 'Open Sans', sans-serif;
 }
 .about-us p {
@@ -78,7 +79,7 @@ body {
   width: 100%;
   text-align: center;
   font-size: 45px;
-  color: black;
+  color:#800000;
   font-family: 'Open Sans', sans-serif;
 }
 .card {
