--- a/src/content.css
+++ b/src/content.css
@@ -4,6 +4,7 @@ body{
 }
 main{
     text-align: center;
+    margin-bottom: 100px;
 }
 .gallery-head-title{
     font-size: 25px;
@@ -23,27 +24,29 @@ main{
 }
 
 .gallery-img img{
-    width: 33vw;
+    width: 25vw;
     border-radius: 45px;
     display: block;
 }
-.gallery-img img:hover{
-    width: 33vw;
-    border-radius: 30px;
+.gallery-img a:hover{
+    width: 25vw;
+    border-radius: 25px;
     /* opacity: 0.80; */
     filter: brightness(80%);
+    transition: 0.25s;
 }
+
 .gallery-img .gallery-title{
     text-align: center;
     padding: 15px;
     font-family: 'Open Sans', sans-serif;
-    
 }
 figure{
     margin:0;
     padding:0;
     position: relative;
 }
+
 figcaption{
     display: none;
     position: absolute;
@@ -56,6 +59,9 @@ figcaption{
     font-weight: bold;
     padding: 0px;
     font-family: 'Open Sans', sans-serif;
+}
+figcaption:hover{
+    display: block;
 }
 
 .gallery-img img:hover + figcaption{
