--- a/src/gallery.css
+++ b/src/gallery.css
@@ -46,7 +46,7 @@ main h1{
     margin: auto;
     background-position: center;
     background-size: cover;
-    background-image: url("../img/YJM_8102.JPG");
+    background-image: url("../img/Oblation.JPG");
     background-attachment: fixed;
 }
 
