fixed icon colors, linking pages in faci etc, and new tab click

--- a/src/contact.css
+++ b/src/contact.css
@@ -149,7 +149,10 @@
     background: #003e00;
   }
   .conIcons a:visited{
-    color: inherit;
+    color: black;
+  }
+  .conIcons a{
+    color: black;
   }
   .inputBox textarea{
     padding: 12px;
